ClientApp: Fix buttons alignment

--- a/DownloadManager.Web/ClientApp/src/app/modules/auth/components/login/login.component.scss
+++ b/DownloadManager.Web/ClientApp/src/app/modules/auth/components/login/login.component.scss
@@ -25,8 +25,13 @@
   }
 
   .login-button {
-    display: block;
-    margin: 0 auto;
+    margin-bottom: 12px;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   mat-card-header {
