--- a/DownloadManager.Web/ClientApp/src/app/modules/auth/components/register/register.component.scss
+++ b/DownloadManager.Web/ClientApp/src/app/modules/auth/components/register/register.component.scss
@@ -1,38 +1,42 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-image: url('/assets/images/login-register.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-  
-    mat-card {
-      width: 100%;
-      max-width: 400px;
-      margin: 2em auto;
-    }
-  
-    .error-message {
-      color: #f44336;
-      margin: 1em 0;
-    }
-  
-    .full-width-input {
-      width: 100%;
-    }
-  
-    .register-button {
-      display: block;
-      margin: 0 auto;
-    }
-  
-    mat-card-header {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url("/assets/images/login-register.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  mat-card {
+    width: 100%;
+    max-width: 400px;
+    margin: 2em auto;
   }
-  
+
+  .error-message {
+    color: #f44336;
+    margin: 1em 0;
+  }
+
+  .full-width-input {
+    width: 100%;
+  }
+
+  .register-button {
+    margin-bottom: 12px;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  mat-card-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
